cmake_minimum_required(VERSION 2.6)
if (POLICY CMP0048)
    cmake_policy(SET CMP0048 NEW)
endif(POLICY CMP0048)

project(redis_3_0_annotated C)

if (MALLOC)
    string(REGEX MATCH "tcmalloc" USE_TCMALLOC "${MALLOC}")
    string(COMPARE EQUAL "jemalloc" "${MALLOC}" USE_JEMALLOC)

    find_package(PkgConfig REQUIRED)
    if (USE_TCMALLOC)
        string(COMPARE EQUAL tcmalloc_minimal ${MALLOC} USE_TCMALLOC_MINIMAL)
        if (USE_TCMALLOC_MINIMAL)
            pkg_check_modules(TC REQUIRED libtcmalloc_minimal)
        else()
            pkg_check_modules(TC REQUIRED libtcmalloc)
        endif()
        add_definitions(-DUSE_TCMALLOC)
        add_link_options(-l${TC_LIBRARIES})
    elseif (USE_JEMALLOC)
        add_definitions(-DUSE_JEMALLOC)
        add_definitions(-DJEMALLOC_NO_DEMANGLE)
        pkg_check_modules(JE REQUIRED jemalloc)
        add_link_options(-l${JE_LIBRARIES})
    endif()
endif()

add_subdirectory(deps)
add_subdirectory(src)